# h5md

./: CLAUDE.md  LICENSE  README.md  advanced_viewer.py  build.bat  build.sh  create_sample.py  enhanced_viewer.py  environment.yml  issue.prompt.yml  markitdown_hdf5.py  meta.yaml  mypy.ini  pyproject.toml  requirements.txt  sample.h5  sample_output.md  setup.py  simple_viewer.py  test_direct.py  test_plugin.py
.github/workflows/: test.yml
h5md/: __init__.py  cli.py  diff.py  html_report.py  json_export.py  validation.py
markitdown_hdf5/: __init__.py  cli.py  html_report.py  json_export.py  validation.py
tests/: test_hdf5_plugin.py
